web/pages/index.css
@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");

@import url(./reset.css);

:root {
  --primary-color: #ff8f3a;
  --primary-color-dark: #f97611;

  --background-color: #f4f4f4;
  --hover-background-light: #33333333;

  --text-color: #333;
  --light-text-color: #f4f4f4;
  --error-color: #ff0033;
}

/* General */

body {
  margin: 0;
  height: 100vh;
  font-family: "Roboto", sans-serif;
}

#__next {
  display: flex;
  height: 100%;
  flex-direction: column;
}

container.app {
  height: 100%;
  padding: 1rem;
  overflow: auto;
}

section.home {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  position: relative;

  &::after {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-image: url("../public/hero.png");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    filter: blur(0.5rem);
  }

  a {
    z-index: 1;
    background-color: var(--primary-color);
    border-radius: 1rem;
    padding: 1rem 2rem;
    transition: all 0.4s;
    opacity: 0.8;

    &:hover {
      background-color: var(--primary-color-dark);
      opacity: 1;
    }

    h1 {
      font-family: "Dancing Script";
      font-size: 8rem;
    }
  }
}

